CB-1560. Wrong default CDH version for CDH 6.2 template