@@ -2,13 +2,14 @@ package com.sequenceiq.cloudbreak.service;
 
 import static com.sequenceiq.cloudbreak.RepoTestUtil.getDefaultCDHInfo;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.spy;
 import static org.powermock.api.mockito.PowerMockito.when;
 
 import java.io.IOException;
-import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -22,39 +23,41 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.sequenceiq.cloudbreak.RepoTestUtil;
-import com.sequenceiq.cloudbreak.common.type.InstanceGroupType;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.request.cluster.ClusterV4Request;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.util.responses.StackMatrixV4Response;
+import com.sequenceiq.cloudbreak.blueprint.utils.BlueprintUtils;
 import com.sequenceiq.cloudbreak.cloud.model.ClouderaManagerProduct;
 import com.sequenceiq.cloudbreak.cloud.model.ClouderaManagerRepo;
 import com.sequenceiq.cloudbreak.cloud.model.Image;
 import com.sequenceiq.cloudbreak.cloud.model.component.DefaultCDHEntries;
 import com.sequenceiq.cloudbreak.cloud.model.component.DefaultCDHInfo;
 import com.sequenceiq.cloudbreak.cloud.model.component.RepositoryInfo;
-import com.sequenceiq.cloudbreak.blueprint.utils.BlueprintUtils;
+import com.sequenceiq.cloudbreak.common.json.Json;
 import com.sequenceiq.cloudbreak.common.type.ComponentType;
+import com.sequenceiq.cloudbreak.common.type.InstanceGroupType;
 import com.sequenceiq.cloudbreak.domain.Blueprint;
 import com.sequenceiq.cloudbreak.domain.KerberosConfig;
-import com.sequenceiq.cloudbreak.common.json.Json;
 import com.sequenceiq.cloudbreak.domain.stack.Component;
 import com.sequenceiq.cloudbreak.domain.stack.Stack;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.Cluster;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.ClusterComponent;
+import com.sequenceiq.cloudbreak.exception.BadRequestException;
 import com.sequenceiq.cloudbreak.workspace.model.Workspace;
 
 public class ClouderaManagerClusterCreationSetupServiceTest {
 
-    public static final String CDH_VERSION = "6.2.0";
+    private static final String NEWER_CDH_VERSION = "1.9.0";
 
-    public static final String DEFAULT_CDH_VERSION = "1.0.0";
+    private static final String SOME_CDH_VERSION = "1.5.0";
 
-    public static final String CM_VERSION = "6.2.0";
+    private static final String OLDER_CDH_VERSION = "1.0.0";
 
-    public static final String DEFAULT_CM_VERSION = "2.0.0";
+    private static final String CM_VERSION = "6.2.0";
 
-    public static final String REDHAT_7 = "redhat7";
+    private static final String DEFAULT_CM_VERSION = "2.0.0";
+
+    private static final String REDHAT_7 = "redhat7";
 
     @Mock
     private DefaultCDHEntries defaultCDHEntries;
@@ -75,78 +78,108 @@ public class ClouderaManagerClusterCreationSetupServiceTest {
 
     private Stack stack;
 
-    private Blueprint blueprint;
-
-    private Workspace workspace;
-
     private Cluster cluster;
-
-    private Component cmRepoComponent;
 
     private Component imageComponent;
 
-    private List<Component> productComponentList;
-
     @Before
-    public void init() throws JsonProcessingException {
+    public void init() {
         MockitoAnnotations.initMocks(this);
-        workspace = new Workspace();
+        Workspace workspace = new Workspace();
         clusterRequest = new ClusterV4Request();
         stack = new Stack();
         stack.setId(1L);
+        stack.setName("test-stack");
         stack.setWorkspace(workspace);
-        blueprint = new Blueprint();
+        Blueprint blueprint = new Blueprint();
         blueprint.setBlueprintText("{}");
         Map<InstanceGroupType, String> userData = new HashMap<>();
         userData.put(InstanceGroupType.CORE, "userdata");
         Image image = new Image("imagename", userData, "centos7", REDHAT_7, "url", "imgcatname",
                 "id", Collections.emptyMap());
-        cmRepoComponent = spy(new Component(ComponentType.CM_REPO_DETAILS,
-                ComponentType.CM_REPO_DETAILS.name(), new Json(getClouderaManagerRepo(false)), stack));
         imageComponent = new Component(ComponentType.IMAGE, ComponentType.IMAGE.name(), new Json(image), stack);
-        Component productComponent = spy(new Component(ComponentType.CDH_PRODUCT_DETAILS,
-                ComponentType.CDH_PRODUCT_DETAILS.name(), new Json(getClouderaManagerProductRepo()), stack));
-        productComponentList = new ArrayList();
-        productComponentList.add(productComponent);
 
         cluster = new Cluster();
         stack.setCluster(cluster);
+        cluster.setStack(stack);
         KerberosConfig kerberosConfig = new KerberosConfig();
         kerberosConfig.setDomain("domain");
         cluster.setKerberosConfig(kerberosConfig);
         cluster.setBlueprint(blueprint);
-        DefaultCDHInfo defaultCDHInfo = getDefaultCDHInfo(DEFAULT_CM_VERSION, DEFAULT_CDH_VERSION);
         setupDefaultClouderaManagerEntries();
 
-        when(defaultCDHEntries.getEntries()).thenReturn(Collections.singletonMap(DEFAULT_CDH_VERSION, defaultCDHInfo));
+        Map<String, DefaultCDHInfo> defaultCDHInfoMap = Map.of(
+                OLDER_CDH_VERSION, getDefaultCDHInfo(DEFAULT_CM_VERSION, OLDER_CDH_VERSION),
+                SOME_CDH_VERSION, getDefaultCDHInfo(DEFAULT_CM_VERSION, SOME_CDH_VERSION),
+                NEWER_CDH_VERSION, getDefaultCDHInfo(DEFAULT_CM_VERSION, NEWER_CDH_VERSION)
+        );
+        when(defaultCDHEntries.getEntries()).thenReturn(defaultCDHInfoMap);
         StackMatrixV4Response stackMatrixV4Response = new StackMatrixV4Response();
-        stackMatrixV4Response.setCdh(Collections.singletonMap(DEFAULT_CDH_VERSION, null));
+        stackMatrixV4Response.setCdh(Collections.singletonMap(OLDER_CDH_VERSION, null));
         when(stackMatrixService.getStackMatrix()).thenReturn(stackMatrixV4Response);
-        when(blueprintUtils.getCDHStackVersion(any())).thenReturn(CDH_VERSION);
     }
 
     @Test
-    public void testBaseClouderaManagerClusterComponents() throws IOException {
+    public void specificVersionUsedIfAvailable() throws IOException {
+        when(blueprintUtils.getCDHStackVersion(any())).thenReturn(OLDER_CDH_VERSION);
 
         List<ClusterComponent> clusterComponents = underTest.prepareClouderaManagerCluster(clusterRequest, cluster,
-                null, null,  Optional.of(imageComponent));
-        assertEquals(2, clusterComponents.size());
-        assertTrue(clusterComponents.stream().anyMatch(component -> ComponentType.CM_REPO_DETAILS.equals(component.getComponentType())
-                && component.getAttributes().getValue().contains(DEFAULT_CM_VERSION)));
-        assertTrue(clusterComponents.stream().anyMatch(component -> ComponentType.CDH_PRODUCT_DETAILS.equals(component.getComponentType())
-                && component.getAttributes().getValue().contains(DEFAULT_CDH_VERSION)));
+                Optional.empty(), List.of(),  Optional.of(imageComponent));
+
+        assertVersionsMatch(clusterComponents, DEFAULT_CM_VERSION, OLDER_CDH_VERSION);
+    }
+
+    @Test
+    public void latestUsedIfVersionUnspecified() throws IOException {
+        when(blueprintUtils.getCDHStackVersion(any())).thenReturn(null);
+
+        List<ClusterComponent> clusterComponents = underTest.prepareClouderaManagerCluster(clusterRequest, cluster,
+                Optional.empty(), List.of(),  Optional.of(imageComponent));
+
+        assertVersionsMatch(clusterComponents, DEFAULT_CM_VERSION, NEWER_CDH_VERSION);
+    }
+
+    @Test(expected = BadRequestException.class)
+    public void throwsForNonExistentVersion() throws IOException {
+        when(blueprintUtils.getCDHStackVersion(any())).thenReturn("5.6.7");
+
+        underTest.prepareClouderaManagerCluster(clusterRequest, cluster,
+                Optional.empty(), List.of(),  Optional.of(imageComponent));
     }
 
     @Test
     public void testPrewarmedClouderaManagerClusterComponents() throws IOException {
+        when(blueprintUtils.getCDHStackVersion(any())).thenReturn(SOME_CDH_VERSION);
+        Component cmRepoComponent = spy(new Component(ComponentType.CM_REPO_DETAILS,
+                ComponentType.CM_REPO_DETAILS.name(), new Json(getClouderaManagerRepo(false)), stack));
+        Component productComponent = spy(new Component(ComponentType.CDH_PRODUCT_DETAILS,
+                ComponentType.CDH_PRODUCT_DETAILS.name(), new Json(getClouderaManagerProductRepo()), stack));
+        List<Component> productComponentList = List.of(productComponent);
 
         List<ClusterComponent> clusterComponents = underTest.prepareClouderaManagerCluster(clusterRequest, cluster, Optional.of(cmRepoComponent),
                 productComponentList, Optional.of(imageComponent));
+
+        assertVersionsMatch(clusterComponents, CM_VERSION, SOME_CDH_VERSION);
+    }
+
+    private void assertVersionsMatch(Collection<ClusterComponent> clusterComponents, String cmVersion, String cdhVersion) {
+        assertNotNull(clusterComponents);
         assertEquals(2, clusterComponents.size());
-        assertTrue(clusterComponents.stream().anyMatch(component -> ComponentType.CM_REPO_DETAILS.equals(component.getComponentType())
-                && component.getAttributes().getValue().contains(CM_VERSION)));
-        assertTrue(clusterComponents.stream().anyMatch(component -> ComponentType.CDH_PRODUCT_DETAILS.equals(component.getComponentType())
-                && component.getAttributes().getValue().contains(CDH_VERSION)));
+        assertContainsVersion(cmVersion, findComponentByType(clusterComponents, ComponentType.CM_REPO_DETAILS));
+        assertContainsVersion(cdhVersion, findComponentByType(clusterComponents, ComponentType.CDH_PRODUCT_DETAILS));
+    }
+
+    private void assertContainsVersion(String expectedVersion, ClusterComponent component) {
+        String versionStr = String.format("\"version\":\"%s\"", expectedVersion);
+        assertTrue(String.format("Expected '%s' to contain '%s'", component.getAttributes().getValue(), versionStr),
+                component.getAttributes().getValue().contains(versionStr));
+    }
+
+    private ClusterComponent findComponentByType(Collection<ClusterComponent> clusterComponents, ComponentType type) {
+        return clusterComponents.stream()
+            .filter(component -> type.equals(component.getComponentType()))
+            .findAny()
+            .orElseThrow(() -> new AssertionError("component not found: " + type));
     }
 
     private ClouderaManagerRepo getClouderaManagerRepo(boolean defaultRepo) {
@@ -159,7 +192,7 @@ public class ClouderaManagerClusterCreationSetupServiceTest {
     private ClouderaManagerProduct getClouderaManagerProductRepo() {
         ClouderaManagerProduct product = new ClouderaManagerProduct();
         product.withName("CDH").
-                withVersion(CDH_VERSION).
+                withVersion(SOME_CDH_VERSION).
                 withParcel("https://archive.cloudera.com/cdh6/6.2.0/parcels/");
         return product;
     }
@@ -171,6 +204,9 @@ public class ClouderaManagerClusterCreationSetupServiceTest {
 
         Mockito.when(defaultClouderaManagerRepoService.getEntries()).thenReturn(clouderaManagerEntries);
         ClouderaManagerRepo clouderaManagerRepo = getClouderaManagerRepo(true);
-        Mockito.when(defaultClouderaManagerRepoService.getDefault(REDHAT_7, "CDH", CM_VERSION)).thenReturn(clouderaManagerRepo);
+        Mockito.when(defaultClouderaManagerRepoService.getDefault(REDHAT_7, "CDH", SOME_CDH_VERSION)).thenReturn(clouderaManagerRepo);
+        Mockito.when(defaultClouderaManagerRepoService.getDefault(REDHAT_7, "CDH", NEWER_CDH_VERSION)).thenReturn(clouderaManagerRepo);
+        Mockito.when(defaultClouderaManagerRepoService.getDefault(REDHAT_7, "CDH", OLDER_CDH_VERSION)).thenReturn(clouderaManagerRepo);
+        Mockito.when(defaultClouderaManagerRepoService.getDefault(REDHAT_7, "CDH", null)).thenReturn(clouderaManagerRepo);
     }
 }
